--- a/src/Components/HomePage/index.css
+++ b/src/Components/HomePage/index.css
@@ -11,7 +11,7 @@
 }
 .myphoto{
     border-radius: 36px;
-    height:100%;
+    height:80%;
     width:20%;
 }
 .profile_detail{
@@ -26,8 +26,8 @@
     font-family:'Times New Roman', Times, serif ;
     font-size: larger;
     font-size: 30px;
+    margin-bottom: 10px;
     color:#ffffff99;
-    margin:0;
 }
 .Name{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -35,11 +35,12 @@
     color:#fffff3;
     font-weight: bolder;
     font-size:50px;
+    margin-top:0;
 }
 .profile_description{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color:#ffffff;
-    font-size:25px;
+    font-size:22px;
     margin:3px;
     opacity: 0.8;
 }
@@ -51,8 +52,13 @@
     border-radius: 8px;
     cursor: pointer;
     font-size: larger;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: transparent;
     color:#000000;
+    font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     width:155px;
     height:38px;
 }
@@ -67,7 +73,9 @@
     margin:8px;
     cursor: pointer;
 }
-
+.resumelink{
+    text-decoration: none;
+}
 @media screen and (max-width:576px){
     .ProfileContainer{
         width:100%;
@@ -75,6 +83,9 @@
     }
     .myphoto{
         width:50%;
+    }
+    .intro{
+        display:none;
     }
     .profile_detail{
         width:auto;
@@ -91,9 +102,10 @@
         color:#ffffff;
         font-weight: bolder;
         font-size:45px;
-        text-decoration: underline;
+
     }
     .profile_description{ 
         font-size: 25px;
+        margin-top:18px;
     }
 }
