--- a/src/Components/Navbar/index.css
+++ b/src/Components/Navbar/index.css
@@ -35,7 +35,14 @@
     }
     .menulogo{
         margin:8px;
+        color: #ffffff;
+        font-size:25px;
     }
+    .menuButton{
+        border:0 none;
+        background-color: transparent;
+    }
+    
 }
 .NavbarUnorderedlist{
     padding:0;
@@ -52,4 +59,5 @@
     color:#ffffff;
     font-family:"cursive";
 }
+
 
